Add initial Flink job setup with example data source and update POM configuration